--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -401,7 +401,7 @@ body.modo-oscuro .summary-card {
   flex-direction: column;
   justify-content: flex-start;
   gap: 15px;
-  background-color: #4d82bc;
+  background-color: #4dbc6c;
   padding: 25px 25px 30px;
   border-radius: 15px;
   box-shadow: 0 4px 8px rgba(0,0,0,0.3);
