--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -177,11 +177,14 @@
   </div>
 </div>
 
+<div id="toast-container" style="position:fixed;right:16px;bottom:16px;z-index:9999"></div>
+
+
 <script type="application/json" id="categorias-json">
   {{ categorias | tojson | safe }}
 </script>
 <script>
-  // Cárgalo en window para que dashboard.js lo encuentre
+
   window.categorias = {};
   try {
     const el = document.getElementById('categorias-json');
