--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -21,8 +21,8 @@
         <div id="login-section">
             <h2>Iniciar Sesión</h2>
             <div class="alert alert-danger d-none" id="error-msg"></div>
-            <form id="login-form">
-                <div class="input-group">
+            <form id="login-form"> 
+                <div class="input-group"> <!-- cr-->
                     <span class="input-group-icon"><i class="fas fa-envelope"></i></span>
                     <input type="text" id="correo" name="correo" placeholder="Ingresa tu correo" required>
                 </div>
