--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -53,6 +53,8 @@
                     <input type="password" name="contraseña" placeholder="Contraseña" required>
                 </div>
                 <button type="submit" class="register-btn">Registrarse</button>
+                <div class="alert alert-danger d-none" id="error-msg"></div>
+
             </form>
             <p class="registro-texto">¿Ya tienes cuenta? <a href="#" id="mostrarLogin">Inicia sesión</a></p>
         </div>
