--- a/app/templates/admin/configuracion.html
+++ b/app/templates/admin/configuracion.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <title>Configuración de la Cuenta</title>
   <link rel="stylesheet"href="{{ url_for('static', filename='css/styles.css') }}">
+  <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
   <div class="dashboard-container">
@@ -64,6 +66,10 @@
       <button id="btn-reseteo-total" class="btn-danger">Reiniciar Cuenta desde Cero</button>
     </div>
 
+    <button id="logout-btn" class="btn btn-outline-danger mt-3">
+      <i class="fas fa-sign-out-alt"></i> Cerrar sesión
+    </button>
+
   </div>
 
 </main>
@@ -72,6 +78,6 @@
   <!-- Script para exportar -->
   <script src="{{ url_for('static', filename='js/reset_back.js') }}"></script>
   <script src="{{ url_for('static', filename='js/temas.js') }}"></script>
-
+  <script src="{{ url_for('static', filename='js/logout.js') }}"></script>
 </body>
 </html>
